The page header has been updated. Added a table on the attendance of museums in the world

--- a/lab1/museum.html
+++ b/lab1/museum.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>  
-        <ul>
+      <ul class="main-menu">
             <li>
                 <a href="index.html">Головна сторінка</a>
             </li>
@@ -24,28 +24,109 @@
         </ul>
     
 </header>
+
+
 <table>
-    <caption>Безоплатні ресурси для програмування</caption>
+  <thead>
+      <tr>
+          <th>N.</th>
+          <th>Музей</th>
+          <th>Місто</th>
+          <th>Країна</th>
+          <th>Відвідувачів на рік</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>1</td>
+          <td><a href="https://uk.wikipedia.org/wiki/%D0%9B%D1%83%D0%B2%D1%80">Лувр</a></td>
+          <td>Париж</td>
+          <td>Франція</td>
+          <td>2,700,000</td>    
+      </tr>
+  </tbody>
+  <tbody>
     <tr>
-      <th>Сайти</th>
-      <th>Ютуб канали</th>
-      <th>Мобільні додатки</th>
+        <td>2</td>
+        <td><a href="https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%D0%9A%D0%B8%D1%82%D0%B0%D1%8E">Національний музей Китаю</a></td>
+        <td>Пекін</td>
+        <td>КНР</td>
+        <td>1,600,000</td>
     </tr>
-    <tr>
-      <td>Freecode Camp</td>
-      <td>Freecode Camp</td>
-      <td>Enki</td>
-    </tr>
-    <tr>
-      <td>W3Schools</td>
-      <td>Academind</td>
-      <td>Programming Hero</td>
-    </tr>
-    <tr>
-      <td>Khan Academy</td>
-      <td>The Coding Train</td>
-      <td>Solo learn</td>
-    </tr>
-  </table>
+</tbody>
+<tbody>
+  <tr>
+      <td>3</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%A2%D0%B5%D0%B9%D1%82_%D0%9C%D0%BE%D0%B4%D0%B5%D1%80%D0%BD">Тейт Модерн</a></td>
+      <td>Лондон</td>
+      <td>Велика Британія</td>
+      <td>1,432,941</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>4</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%9C%D1%83%D0%B7%D0%B5%D1%97_%D0%92%D0%B0%D1%82%D0%B8%D0%BA%D0%B0%D0%BD%D1%83">Музей Ватикану</a></td>
+      <td>Ватикан(Рим)</td>
+      <td>Ватикан</td>
+      <td>1,300,000</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>5</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%91%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9">Британський музей</a></td>
+      <td>Лондон</td>
+      <td>Велика Британія</td>
+      <td>1,275,466</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>6</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80_%D0%BC%D0%B8%D1%81%D1%82%D0%B5%D1%86%D1%82%D0%B2_%D0%BA%D0%BE%D1%80%D0%BE%D0%BB%D0%B5%D0%B2%D0%B8_%D0%A1%D0%BE%D1%84%D1%96%D1%97">Центр мистецтв королеви Софії</a></td>
+      <td>Мадрид</td>
+      <td>Іспанія</td>
+      <td>1,248,480</td>
+</tbody>
+<tbody>
+  <tr>
+      <td>7</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0_%D0%B3%D0%B0%D0%BB%D0%B5%D1%80%D0%B5%D1%8F_(%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD)">Національна галерея</a></td>
+      <td>Лондон</td>
+      <td>Велика Британія</td>
+      <td>1,197,143</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>8</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%9C%D1%83%D0%B7%D0%B5%D0%B9_%D0%BC%D0%B8%D1%81%D1%82%D0%B5%D1%86%D1%82%D0%B2%D0%B0_%D0%9C%D0%B5%D1%82%D1%80%D0%BE%D0%BF%D0%BE%D0%BB%D1%96%D1%82%D0%B5%D0%BD">Музей мистецтва Метрополітену</a></td>
+      <td>Нью-Йорк</td>
+      <td>США</td>
+      <td>1,124,759</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>9</td>
+      <td><a href="#">Музей сучасного мистецтва</a></td>
+      <td>Канадзава</td>
+      <td>Японія</td>
+      <td>971,256</td>
+  </tr>
+</tbody>
+<tbody>
+  <tr>
+      <td>10</td>
+      <td><a href="https://uk.wikipedia.org/wiki/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9_%D0%BC%D1%83%D0%B7%D0%B5%D0%B9_%D1%81%D1%83%D1%87%D0%B0%D1%81%D0%BD%D0%BE%D0%B3%D0%BE_%D0%BC%D0%B8%D1%81%D1%82%D0%B5%D1%86%D1%82%D0%B2%D0%B0_(%D0%9F%D0%B0%D1%80%D0%B8%D0%B6)">Національний музей сучасного мистецтва(Центр Жоржа Помпіду)</a></td>
+      <td>Париж</td>
+      <td>Франція</td>
+      <td>912,803</td>
+  </tr>
+</tbody>
+
+
+</table>
 </body>
 </html>
