--- a/lab1/index.html
+++ b/lab1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <header>  
-                <ul>
+            <ul class="main-menu">
                     <li>
                         <a href="index.html">Головна сторінка</a>
                     </li>
