Added styles for the Museums of the world page

--- a/lab1/museum.html
+++ b/lab1/museum.html
@@ -24,7 +24,17 @@
         </ul>
     
 </header>
+  <div>
+    <h1>Список найвідвідуваніших художніх музеїв світу(2020)</h1>
+    <p><strong>Список найвідвідуваніших художніх музеїв світу (2020)</strong> перераховує ті музеї, що користуються найбільшим інтересом серед відвідувачів 
+      музеїв і галерей, експозиції яких, головним чином складаються з творів художнього мистецтва. Під художнім мистецтвом розуміються скульптура, живопис, 
+      графіка, фотомистецтво і декоративно-прикладне мистецтво. Основним джерелом є щорічне дослідження The Art Newspaper щодо кількості відвідувачів великих 
+      художніх музеїв у 2020 році, опубліковане 30 березня 2021 року.</p>
 
+      <p>Через пандемію COVID-19 перераховані музеї були закриті протягом року на тривалий період часу. Наприклад, Лувр, найкращий музей у списку, був закритий 
+        на 150 днів у 2020 році, а відвідуваність Лувру в 2020 році впала на 72% порівняно з 2019 роком. Загалом відвідуваність найкращих музеїв мистецтва впала 
+        на 77% у 2020 році.</p>
+  </div>
 
 <table>
   <thead>
