Added forms to the main page. Updated information on the page about places of interest in Ukraine

--- a/lab1/ukraine.html
+++ b/lab1/ukraine.html
@@ -24,70 +24,88 @@
         </ul>
     
 </header>
-<div>
-    <h3>Місця України, які на мою думку варто відвідати</h3>
-    <ol>
-        <li><a href="">Біосферний заповідник «Асканія-Нова», Херсонська область</a></li>
-        <li><a href="">Олешківські піски, м.Олешки</a></li>
-        <li><a href="">Озеро Синевир, Закарпатська область</a></li>
-        <li><a href="">Кінбурнська коса, Миколаївська область</a></li>
-        <li><a href="">Печера Оптимістична, с. Королівка, Тернопільська область</a></li>
-        <li><a href="">Гранд-каньйон Станіслав, Херсонська область</a></li>
-        <li><a href="">Дністровський каньйон, Тернопільська область</a></li>
-        <li><a href="">Бакота, Хмельницька область</a></li>
-        <li><a href="">Говерла, Івано-Франківська область</a></li>
-        <li><a href="">Тараканівський форт, Рівненська область</a></li>
-    </ol>
-</div>
 
-<div>
-    <h3>Біосферний заповідник «Асканія-Нова», Херсонська область</h3>
-    <img src ="images/askania.jpeg" alt="" width="700" height="400">
-</div>
+<h1>Місця України, які варті уваги кожного</h1>
+<div class="tour-container">
+    <div class="tour">
+        <h3>1.Біосферний заповідник «Асканія-Нова», Херсонська область</h3>
+        <p>Найстаріший степовий резерват світу, одне з 7 природних чудес України, де мешкають зебри й антилопи, 
+            бізони та буйволи, олені та дикі коні. Всього на території перебуває 3000 видів тварин.</p>
+        <img src ="images/askania.jpeg" alt="Аскані-Нова" >
+    </div>
 
-<div>
-    <h3>Олешківські піски, м.Олешки</h3>
-    <img src ="images/oleshkiv.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>2.Олешківські піски, м.Олешки</h3>
+        <p>Піщаний масив, який дослідники називають напівпустелею. Це унікальна для півдня України природна зона, 
+            на якій можна побачити рідкісні види рослин та незвичайні для нашої країни пейзажі.</p>
+        <img src ="images/oleshkiv.jpeg" alt="Олешківські піски">
+    </div>
 
-<div>
-    <h3>Озеро Синевир, Закарпатська область</h3>
-    <img src ="images/synevyr.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>3.Озеро Синевир, Закарпатська область</h3>
+        <p>Найбільше за площею озеро України, яке оточене ялинами та горами. Неймовірно прекрасне місце!</p>
+        <img src ="images/synevyr.jpeg" alt="Синевир">
+    </div>
 
-<div>
-    <h3>Кінбурнська коса, Миколаївська область</h3>
-    <img src ="images/kinbur.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>4.Кінбурнська коса, Миколаївська область</h3>
+        <p>Коса, яка простягається на декілька кілометрів, здивує красою природи. 
+            Тут можна побачити піщані масиви, хвойні ліси та соляні промисли. </p>
+        <img src ="images/kinbur.jpeg" alt="Кінбурська коса">
+    </div>
 
-<div>
-    <h3>Печера Оптимістична, с. Королівка, Тернопільська область</h3>
-    <img src ="images/pechera.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>5.Печера Оптимістична, с. Королівка, Тернопільська область</h3>
+        <p>Величезна печера, яка вражає своїми лабіринтами, сталактитами та невеличким озером всередині. В 
+            печері можна навіть заночувати, якщо ви любите екстрим.</p>
+        <img src ="images/pechera.jpeg" alt="Печера Оптимістична">
+    </div>
 
-<div>
-    <h3>Гранд-каньйон Станіслав, Херсонська область</h3>
-    <img src ="images/stanislav.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>6.Гранд-каньйон Станіслав, Херсонська область</h3>
+        <p>Прибережна частина Дніпро-Бузького лиману, де замість звичного пісочного або галькового 
+            узбережжя на туристів чекають обривисті скелі.</p>
+        <img src ="images/stanislav.jpeg" alt="Гранд-каньйон Станіслав">
+    </div>
 
-<div>
-    <h3>Дністровський каньйон, Тернопільська область</h3>
-    <img src ="images/dnister.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>7.Дністровський каньйон, Тернопільська область</h3>
+        <p>Найдовший в Україні Дністровський каньйон захоплює одразу чотири області: Івано-Франківську, Хмельницьку, Чернівецьку 
+        та Тернопільську. Його довжина 250 км.
+        Навколо річки є соснові та мішані ліси, природні заповідники та скелі девонського геологічного періоду, 
+        яким понад 400 мільйонів років.</p>
+        <img src ="images/dnister.jpeg" alt="Дністровський каньйон" >
+    </div>
 
-<div>
-    <h3>Бакота, Хмельницька область</h3>
-    <img src ="images/bakota.jpeg" alt="" width="600" height="400">
-</div>
+    <div class="tour">
+        <h3>8.Бакота, Хмельницька область</h3>
+        <p>Село Бакота у Хмельницькій області затопили під час будівництва Дністровської ГЕС. На його місці тепер неймовірно гарна 
+            Бакотська затока, яка стала улюбленим місцем для відпочинку багатьох українців.
 
-<div>
-    <h3>Говерла, Івано-Франківська область</h3>
-    <img src ="images/hoverla.jpeg" alt="" width="600" height="400">
-</div>
+            А ще археологічні розкопки свідчать, що на місці Бакоти раніше було багато язичницьких храмів та святилищ. 
+            Тож сюди ще приїжджають, щоб отримати особливу силу та енергію.</p>
+        <img src ="images/bakota.jpeg" alt="Бакота">
+    </div>
 
-<div>
-    <h3>Тараканівський форт, Рівненська область</h3>
-    <img src ="images/tarakaniv.jpeg" alt="" width="600" height="400">
+    <div class="tour">
+        <h3>9.Говерла, Івано-Франківська область</h3>
+        <p>Карпати вже давно завоювали серця українців і не тільки. А їхньою окрасою та справжньою гордістю України вважається Говерла — 
+            найвища гора нашої держави. Її висота — 2060,8 м над рівнем моря.
+
+            Після виснажливого підняття на вершину ти можеш відпочити в традиційних чанах, скуштувати банош та запити 
+            його карпатським домашнім вином. Схоже на ідеальний розпорядок дня, чи не так?</p>
+        <img src ="images/hoverla.jpeg" alt="Говерла">
+    </div>
+
+    <div class="tour">
+        <h3>10.Тараканівський форт, Рівненська область</h3>
+        <p>Тараканівський форт у Рівненській області знайти непросто, адже він схований за хащами. 
+            Та й не дивно, бо ж його будували як оборонну споруду на кордоні.
+
+            Форт давно вже припинив своє функціонування та почав руйнуватись. Але тобі точно стане цікаво поблукати його руїнами. 
+            Лише не забудь захопити з собою ліхтарик!</p>
+        <img src ="images/tarakaniv.jpeg" alt="Тараканівський форт">
+    </div>
 </div>
 
 </body>
