A media query has been created for the 'header', when the screen size is less than 650px

--- a/lab1/lviv.html
+++ b/lab1/lviv.html
@@ -22,6 +22,7 @@
                 <a href="museum.html">Музеї світу</a>
             </li>
         </ul>
+        <div class="menu-icon">&#9776;</div>
     </header>
     <main>
 
@@ -147,4 +148,5 @@
         
     </main>
 </body>
+<script src="/js/script.js"></script>
 </html>
