--- a/lab1/museum.html
+++ b/lab1/museum.html
@@ -22,6 +22,7 @@
                 <a href="museum.html">Музеї світу</a>
             </li>
         </ul>
+        <div class="menu-icon">&#9776;</div>
     
 </header>
   <div>
@@ -139,4 +140,5 @@
 
 </table>
 </body>
+<script src="/js/script.js"></script>
 </html>
