--- a/lab1/ukraine.html
+++ b/lab1/ukraine.html
@@ -22,7 +22,7 @@
                 <a href="museum.html">Музеї світу</a>
             </li>
         </ul>
-    
+        <div class="menu-icon">&#9776;</div>
 </header>
 
 <h1>Місця України, які варті уваги кожного</h1>
@@ -328,4 +328,5 @@
 </div>
 
 </body>
+<script src="/js/script.js"></script>
 </html>
