--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,9 +20,9 @@
                     </li>
                     <li>
                         <a href="museum.html">Музеї світу</a>
-                    </li>
+                    </li>    
                 </ul>
-            
+                <div class="menu-icon" >&#9776;</div>  
         </header>
     <div>
         <form action="#" method="post" class="survey-form">
@@ -75,4 +75,21 @@
         </div>
         
 </body>
+<!-- <script>document.addEventListener("DOMContentLoaded", function() {
+    // Отримати елементи
+    var menuIcon = document.querySelector('.menu-icon');
+    var mainMenu = document.querySelector('.main-menu');
+
+    // Додати слухач подій для натискання на іконку
+    menuIcon.addEventListener('click', function() {
+        // Переключення відображення/приховування випадаючого списку
+        if (mainMenu.style.display === 'none' || mainMenu.style.display === '') {
+            mainMenu.style.display = 'block';
+        } else {
+            mainMenu.style.display = 'none';
+        }
+    });
+});</script> -->
+
+<script src="/js/script.js"></script>
 </html>
