--- a/lab1/museum.html
+++ b/lab1/museum.html
@@ -25,7 +25,7 @@
         <div class="menu-icon">&#9776;</div>
     
 </header>
-  <div>
+  <div class="info-table">
     <h1>Список найвідвідуваніших художніх музеїв світу(2020)</h1>
     <p><strong>Список найвідвідуваніших художніх музеїв світу (2020)</strong> перераховує ті музеї, що користуються найбільшим інтересом серед відвідувачів 
       музеїв і галерей, експозиції яких, головним чином складаються з творів художнього мистецтва. Під художнім мистецтвом розуміються скульптура, живопис, 
