--- a/lab1/museum.html
+++ b/lab1/museum.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>  
-      <ul class="main-menu">
+      <ol class="main-menu">
             <li>
                 <a href="index.html">Головна сторінка</a>
             </li>
@@ -21,7 +21,7 @@
             <li>
                 <a href="museum.html">Музеї світу</a>
             </li>
-        </ul>
+        </ol>
         <div class="menu-icon">&#9776;</div>
     
 </header>
