Created a test from a json file

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -157,6 +157,12 @@
         </form>
     </div>
 
+    <div class="test-info">
+        <h2>Онлайн тест</h2>
+        <p>Пройти невеличкий тест по Web дизайну, можете за <a href="/test.html">посиланням</a></p>
+    </div>
+    
+
     <div class="welcome-message">
         <p>Дякую, що переглядаєте наш сайт. Якщо ви вже читаєте це повідомлення, дякуємо вам за це.
             На даний момент ви маєте можливість переглядати наступні сторінки:</p>
