A small fragment of the faculty emblem is drawn in vector graphics in svg tags

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -162,6 +162,10 @@
         <p>Пройти невеличкий тест по Web дизайну, можете за <a href="/test.html">посиланням</a></p>
     </div>
     
+    <div class="test-info">
+        <h2>Емблема факультету</h2>
+        <p>Емблему факультету можете переглянути за <a href="/svg.html">посиланням</a></p>
+    </div>
 
     <div class="welcome-message">
         <p>Дякую, що переглядаєте наш сайт. Якщо ви вже читаєте це повідомлення, дякуємо вам за це.
