The basic structure of the game has been created

--- a/lab1/test.html
+++ b/lab1/test.html
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script src="/js/scripts.js"></script>
+    <script src="/js/quizScript.js"></script>
 </body>
 </html>
