--- a/lab1/index.html
+++ b/lab1/index.html
@@ -167,6 +167,11 @@
         <p>Емблему факультету можете переглянути за <a href="/svg.html">посиланням</a></p>
     </div>
 
+    <div class="test-info">
+        <h2>Невеличка гра</h2>
+        <p>Бажаєте відволіктися від буденості, та відпочити, можете зіграти у простеньку <a href="/game.html">гру</a></p>
+    </div>
+
     <div class="welcome-message">
         <p>Дякую, що переглядаєте наш сайт. Якщо ви вже читаєте це повідомлення, дякуємо вам за це.
             На даний момент ви маєте можливість переглядати наступні сторінки:</p>
