Update the game adding functionality for restarting the game, add saving game result to localstorage, add display of the 3 best and 3 worst game result

--- a/lab1/game.html
+++ b/lab1/game.html
@@ -49,7 +49,7 @@
           <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()">LEFT</button>
           <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">RIGHT</button><br><br>
           <button onmousedown="movedown()" onmouseup="clearmove()" ontouchstart="movedown()">DOWN</button><br><br>
-          
+          <button onclick="restartGame()">Restart</button>
         </div>
     </div>
 
